--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
         </div>
     </div>
     <div class="menu-bar">
-        <!-- create a menubar here -->
         <!-- logo -->
-        <!-- menu items -->
-        <!-- scollership button -->
+        <a href="index.html"><img src="./assets/NewLogo_1689833187318CCT-logo.png" class="logo"></a>
+            <ul class="navlist">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Admission</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Downloads</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="btn-box">
+                <a href="#" class="btn">Apply Scholarship</a>
+            </div>
     </div>
 
     <div class="hero-section">
