--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
     </div>
 
     <div class="hero-section">
+        <div class="hero-content">
+            <p>Welcome to Chitwan College of Technology</p>
+            <h1>Choose Chitwan College of<br> Technology To Secure Your<br> Future</h1>
+            <button>Explore Our Courses <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
 
+        <div class="hero-img">
+            <img src="./assets/UpdatedMainImage_1647762970380JsIX6pUk9kvtvu36sHnERykdfKSj5w2Bcp87EeG3.jpg" alt="">
+        </div>
+        
     </div>
     
 </body>
