--- a/index.html
+++ b/index.html
@@ -29,17 +29,60 @@
     </div>
 
     <div class="hero-section">
-        <div class="hero-content">
-            <p>Welcome to Chitwan College of Technology</p>
-            <h1>Choose Chitwan College of<br> Technology To Secure Your<br> Future</h1>
-            <button>Explore Our Courses <i class="fa-solid fa-arrow-right"></i></button>
-        </div>
+        <div class="home-content">
+            <div class="content">
+                <span>Welcome to Chitwan College of Technology</span>
+                <h1>Choose Chitwan College of Technology To Secure Your Future</h1>
+                <button>Explore Our Courses <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
 
-        <div class="hero-img">
-            <img src="./assets/UpdatedMainImage_1647762970380JsIX6pUk9kvtvu36sHnERykdfKSj5w2Bcp87EeG3.jpg" alt="">
+            <div class="side-img">
+                <img src="./assets/UpdatedMainImage_1647762970380JsIX6pUk9kvtvu36sHnERykdfKSj5w2Bcp87EeG3.jpg" alt="">
+            </div>
         </div>
         
     </div>
+
+    <div class="about-section">
+        <div class="about-image">
+            <div class="img">
+                <img src="./assets/UpdatedImageOne_1647756813407SNJ24vkPNp3pwO989vXcYfvV95AqeKqIBHwdimIR.jpg" alt="">
+            </div>
+        </div>
+        <div class="about-content">
+            <span>About our College</span>
+            <h1>Know About<br> Chitwan College of Technology</h1>
+            <p>Chitwan College of Technology, a modern college, is established with an aim to significantly contribute to shape the career of +2 graduates in the field of IT and Computing. The college offers BIM, BCA and BSc. CSIT affiliated to TU.</p>
+            <p>The college, in fact, is committed to helping students develop skills, knowledge, and attitudes that he...</p>
+            <button>Find out more <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+    </div>
+
+   <div class="course-section">
+        <h1>Browse Courses By Chitwan College of Technology</h1>
+        <div class="about-course">
+            <div class="box">
+                <img src="./assets/BCA.png" alt="Photo 1">
+                <h3>BCA</h3>
+                <p>Bachelor of Computer Application (BCA) is a four year, 8 semester program of Tribhuvan University under Faculty of Humanities a...</p>
+                <a href="#" class="read-more">Find out more <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+
+            <div class="box">
+                <img src="./assets/BIM.png" alt="Photo 2">
+                <h3>BIM</h3>
+                <p>BIM (Bachelor in Information Management) is a four-year bachelor's degree program affiliated to Tribhuvan University under...</p>
+                <a href="#" class="read-more">Find out more <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+
+            <div class="box">
+                <img src="./assets/BsC.png" alt="Photo 3">
+                <h3>Bsc. CSIT</h3>
+                <p>Bachelor of Science in Computer Science and Information Technology (BSc. CSIT) is a four year course affiliated to Tribhuvan Un...</p>
+                <a href="#" class="read-more">Find out more <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+   </div>
     
 </body>
 </html>
